# soup-sharp

./: AUTHORS  Makefile.am  README.md  configure.ac  m4.custom  soup-sharp-2.4.pc.in
doc/: Makefile.am
m4/: glib.m4
sources/: Makefile.am  soup-sharp-api.raw  soup-sharp.metadata  soup-sharp.snk
sources/glue/: Makefile.am
